--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,7 @@
     </li>
     <li>JSP
         <ul>
+            <li><a href="/jsp/members/new-form.jsp">회원가입</a></li>
             <li><a href="/jsp/members.jsp">회원목록</a></li>
         </ul>
     </li>
@@ -53,48 +54,31 @@
             <li><a href="/front-controller/v5/v3/members/new-form">회원가입</a></li>
             <li><a href="/front-controller/v5/v3/members">회원목록</a></li>
         </ul>
-    <li><a href="/front-controller/v2/members/new-form">회원가입</a></li>
-    <li><a href="/front-controller/v2/members">회원목록</a></li>
-</ul>
-</li>
-<li>FrontController - v3
-    <ul>
-        <li><a href="/front-controller/v3/members/new-form">회원가입</a></li>
-        <li><a href="/front-controller/v3/members">회원목록</a></li>
-    </ul>
-</li>
-<li>FrontController - v4
-    <ul>
-        <li><a href="/front-controller/v4/members/new-form">회원가입</a></li>
-        <li><a href="/front-controller/v4/members">회원목록</a></li>
-    </ul>
-</li>
-<li>FrontController - v5 - v3
-</li>
-<li>FrontController - v5 - v4
-    <ul>
-        <li><a href="/front-controller/v5/v4/members/new-form">회원가입</a></li>
-        <li><a href="/front-controller/v5/v4/members">회원목록</a></li>
-    </ul>
-</li>
-<li>SpringMVC - v1
-    <ul>
-        <li><a href="/springmvc/v1/members/new-form">회원가입</a></li>
-        <li><a href="/springmvc/v1/members">회원목록</a></li>
-    </ul>
-</li>
-<li>SpringMVC - v2
-    <ul>
-        <li><a href="/springmvc/v2/members/new-form">회원가입</a></li>
-        <li><a href="/springmvc/v2/members">회원목록</a></li>
-    </ul>
-</li>
-<li>SpringMVC - v3
-    <ul>
-        <li><a href="/springmvc/v3/members/new-form">회원가입</a></li>
-        <li><a href="/springmvc/v3/members">회원목록</a></li>
-    </ul>
-</li>
+    </li>
+    <li>FrontController - v5 - v4
+        <ul>
+            <li><a href="/front-controller/v5/v4/members/new-form">회원가입</a></li>
+            <li><a href="/front-controller/v5/v4/members">회원목록</a></li>
+        </ul>
+    </li>
+    <li>SpringMVC - v1
+        <ul>
+            <li><a href="/springmvc/v1/members/new-form">회원가입</a></li>
+            <li><a href="/springmvc/v1/members">회원목록</a></li>
+        </ul>
+    </li>
+    <li>SpringMVC - v2
+        <ul>
+            <li><a href="/springmvc/v2/members/new-form">회원가입</a></li>
+            <li><a href="/springmvc/v2/members">회원목록</a></li>
+        </ul>
+    </li>
+    <li>SpringMVC - v3
+        <ul>
+            <li><a href="/springmvc/v3/members/new-form">회원가입</a></li>
+            <li><a href="/springmvc/v3/members">회원목록</a></li>
+        </ul>
+    </li>
 </ul>
 </body>
 </html>
